# proto3-wire

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  cabal.project  default.nix  proto3-wire.cabal  release.nix  shell.nix  stack-8.10.7.yaml  stack-9.0.2.yaml  stack.yaml
.github/workflows/: ci.yml
bench/: Main.hs
nix/: haskell-packages.nix  nixpkgs.nix  pkgs.nix  project.json  project.nix  word-compat.nix
nix/patches/: pantry-0.9.3.2.patch
src/Proto3/: Wire.hs
src/Proto3/Wire/: Builder.hs  Class.hs  Decode.hs  Encode.hs  FoldR.hs  Reverse.hs  Tutorial.hs  Types.hs
src/Proto3/Wire/Encode/: Repeated.hs
src/Proto3/Wire/Reverse/: Internal.hs  Prim.hs  Width.hs
test/: Main.hs
