name:                proto3-wire
version:             1.0.0
synopsis:            A low-level implementation of the Protocol Buffers (version 3) wire format
license:             Apache-2.0
license-file:        LICENSE
author:              Awake Networks
maintainer:          opensource@awakenetworks.com
copyright:           2016 Awake Networks
category:            Codec
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Proto3.Wire
                       Proto3.Wire.Builder
                       Proto3.Wire.Decode
                       Proto3.Wire.Encode
                       Proto3.Wire.Tutorial
                       Proto3.Wire.Types
  build-depends:       base >=4.8 && <=5.0,
                       bytestring >=0.10.6.0 && <0.11.0,
                       cereal >= 0.5.1 && <0.6,
                       containers ==0.5.*,
                       deepseq ==1.4.*,
                       safe ==0.3.*,
                       text >= 0.2 && <1.3,
                       QuickCheck >=2.8 && <2.9

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       base >=4.8 && <=5.0,
                       bytestring >=0.10.6.0 && <0.11.0,
                       cereal >= 0.5.1 && <0.6,
                       proto3-wire,
                       QuickCheck >=2.8 && <2.9,
                       tasty >= 0.11 && <0.12,
                       tasty-hunit >= 0.9 && <0.10,
                       tasty-quickcheck >= 0.8.4 && <0.9,
                       text >= 0.2 && <1.3
